<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_book">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="108dp">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:id="@+id/display_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author" />

        <TextView
            android:id="@+id/display_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author" />

        <TextView
            android:id="@+id/book_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <TextView
            android:id="@+id/display_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <TextView
            android:id="@+id/book_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isbn" />

        <TextView
            android:id="@+id/display_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/display_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isbn" />

        <TextView
            android:id="@+id/book_etext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etext" />

        <TextView
            android:id="@+id/display_etext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etext" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>